--- a/rag/configs/rag_config.yaml
+++ b/rag/configs/rag_config.yaml
@@ -3,16 +3,15 @@ retriever:
   params:
     embedding_model: "sentence-transformers/all-mpnet-base-v2"
     device: "cuda"  # Use GPU
+  document_store:
+    type: "faiss"  # Options: "faiss" or "pinecone"
+    params:
+      persistent: true  # Set to true to enable saving/loading the index for FAISS
+      embedding_model: "sentence-transformers/all-mpnet-base-v2"
+      # Pinecone-specific configuration (only applies if type is "pinecone")
+      api_key: "your_pinecone_api_key"  # Replace with your Pinecone API key
+      index_name: "your_pinecone_index_name"  # Replace with your Pinecone index name
 
-document_store:
-  type: "faiss"  # Options: "faiss" or "pinecone"
-  params:
-    persistent: true  # Set to true to enable saving/loading the index for FAISS
-    index_path: "data/vector_store.faiss"  # File path for FAISS index storage
-    embedding_model: "sentence-transformers/all-mpnet-base-v2"
-    # Pinecone-specific configuration (only applies if type is "pinecone")
-    api_key: "your_pinecone_api_key"  # Replace with your Pinecone API key
-    index_name: "your_pinecone_index_name"  # Replace with your Pinecone index name
 
 
 llm:
@@ -20,6 +19,12 @@ llm:
   params:
     api_key: "${sk-60abf91dbc1b4b3991cfa5362f0e4c1b}"
     model: "deepseek-chat"
+
+hash_store:
+  type: "sqlite"  # Options: "sqlite", "redis", "mongodb", etc.
+  params:
+    db_path: "path/to/your/hash_store.db"  # Replace with your database file path
+
 
 scraper:
   type: "iranhotelonline"  # or "yelp"
