--- a/rag/configs/rag_config.yaml
+++ b/rag/configs/rag_config.yaml
@@ -18,7 +18,11 @@ llm:
   provider: "deepseek"  # or "openai"
   params:
     api_key: "${sk-60abf91dbc1b4b3991cfa5362f0e4c1b}"
-    model: "deepseek-chat"
+    model: "deepseek-r1:14b"
+    mode: "local"
+    temperature: 0.3
+    max_tokens: 512
+    stream: False
 
 hash_store:
   type: "sqlite"  # Options: "sqlite", "redis", "mongodb", etc.
